--- a/personal-cabinet.html
+++ b/personal-cabinet.html
@@ -133,8 +133,8 @@
                 </div>
             </div><!--END #bread-crumbs-block-->
 
-            <section class="article-content main-container">
-                <h1>О компании</h1>
+            <section class="personal-cabinet main-container">
+                <h1>Личный кабинет</h1>
             </section><!--END .article-content-->
 
         </div><!--END #main-->
