--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
 		<link rel="stylesheet" href="css/normalize.min.css">
-		<link rel="stylesheet" href="css/main.css">
-<!-- 
+<!-- 		<link rel="stylesheet" href="css/main.css"> -->
+
 		<link rel="stylesheet/less" type="text/css" href="css/main.less">
 		<script src="js/vendor/less.js" type="text/javascript"></script>
- -->
+
 		<!--[if lt IE 9]>
 			<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 			<script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
@@ -399,7 +399,7 @@
 			<div class="main-container">
 				<div class="footer-top-layout"></div>
 				<div class="footer-bottom-layout"></div>
-				<button id="online-consultant" class="popup" href="#online-consultant-popup"></button>
+				<a id="online-consultant" class="popup" href="#online-consultant-popup"></a>
 
 				<div class="cont">
 					<a class="footer-logo" href="#"></a>
@@ -464,7 +464,7 @@
 					<input id="consult-email" type="text" />
 				</div>
 
-				<button type="submit">Начать диалог</button>
+				<button type="submit" class="blue-btn">Начать диалог</button>
 			</form>
 		</div>
 
