--- a/identity-page.html
+++ b/identity-page.html
@@ -13,11 +13,11 @@
 		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
 		<link rel="stylesheet" href="css/normalize.min.css">
-<!--         <link rel="stylesheet" href="css/main.css"> -->
-
+        <link rel="stylesheet" href="css/main.css">
+<!-- 
 		<link rel="stylesheet/less" type="text/css" href="css/main.less">
 		<script src="js/vendor/less.js" type="text/javascript"></script>
-
+ -->
 		<!--[if lt IE 9]>
 			<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 			<script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
